--- a/banking.html
+++ b/banking.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banking Page</title>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-
-
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -20,15 +18,15 @@
       <!-- Balance and Transaction -->
       <section class="mt-8">
         <div class="grid grid-cols-3 gap-4 text-white">
-          <div class="bg-blue-400 p-8 rounded">
+          <div class="bg-blue-300 p-8 rounded">
             <h3 class="text-2xl">Deposit</h3>
             <h4 class="text-4xl">$<span id="deposit-total">00</span></h4>
           </div>
-          <div class="bg-green-400 p-8 rounded">
+          <div class="bg-green-300 p-8 rounded">
             <h3 class="text-2xl">Withdraw</h3>
             <h4 class="text-4xl">$<span id="withdraw-total">00</span></h4>
           </div>
-          <div class="bg-yellow-400 p-8 rounded">
+          <div class="bg-yellow-300 p-8 rounded">
             <h3 class="text-2xl">Balance</h3>
             <h4 class="text-4xl">$<span id="balance-total">1240</span></h4>
           </div>
@@ -37,7 +35,7 @@
       <!-- Deposit and Withdraw -->
       <section class="mt-8">
         <div class="grid grid-cols-2 gap-4">
-          <div class="bg-red-300 p-8 rounded">
+          <div class="bg-red-100 p-8 rounded">
             <h3 class="text-2xl">Please Deposit</h3>
             <div>
               <input
@@ -54,7 +52,7 @@
               </button>
             </div>
           </div>
-          <div class="bg-purple-300 p-8 rounded">
+          <div class="bg-purple-100 p-8 rounded">
             <h3 class="text-2xl">Please Withdraw</h3>
             <div>
               <input
